# PacMan

./: .clang-format  CMakeLists.txt  README.md  REPORT.md  TODO.txt
.circleci/: config.yml
app/: CMakeLists.txt  main.cpp
logic/: CMakeLists.txt
logic/include/logic/: AbstractFactory.h  Coin.h  Collectable.h  Entity.h  EntityModel.h  Exit.h  Fruit.h  Ghost.h  Lives.h  Observer.h  PacMan.h  Random.h  Score.h  Stopwatch.h  Subject.h  Wall.h  World.h
logic/include/logic/core/: AbstractFactory.h  EntityModel.h  World.h
logic/include/logic/entities/: Coin.h  Collectable.h  Exit.h  Fruit.h  Ghost.h  PacMan.h  Wall.h
logic/include/logic/patterns/: Observer.h  Subject.h
logic/include/logic/systems/: Lives.h  Score.h
logic/include/logic/utils/: Random.h  Stopwatch.h
logic/include/map/: map1.txt
logic/src/: AbstractFactory.cpp  Coin.cpp  Collectable.cpp  Collectables.cpp  Entity.cpp  EntityModel.cpp  Exit.cpp  Fruit.cpp  Ghost.cpp  Lives.cpp  Observer.cpp  PacMan.cpp  Random.cpp  Score.cpp  Stopwatch.cpp  Subject.cpp  Wall.cpp  World.cpp
logic/src/core/: EntityModel.cpp  World.cpp
logic/src/entities/: Coin.cpp  Collectable.cpp  Fruit.cpp  Ghost.cpp  PacMan.cpp  Wall.cpp
logic/src/patterns/: Subject.cpp
logic/src/systems/: Lives.cpp  Score.cpp
representation/: CMakeLists.txt
representation/include/representation/: Camera.h  CoinView.h  ConcreteFactory.h  EntityView.h  FruitView.h  Game.h  GhostView.h  HUD.h  LevelState.h  MenuState.h  PacManView.h  PausedState.h  SoundManager.h  SoundObserver.h  SpriteAtlas.h  State.h  StateManager.h  VictoryState.h  WallView.h
representation/include/representation/core/: Camera.h  ConcreteFactory.h  Game.h  SpriteAtlas.h
representation/include/representation/entities/: CoinView.h  EntityView.h  FruitView.h  GhostView.h  PacManView.h  WallView.h
representation/include/representation/states/: LevelState.h  MenuState.h  PausedState.h  State.h  StateManager.h  VictoryState.h
representation/include/representation/systems/: HUD.h  SoundManager.h  SoundObserver.h
representation/src/: Camera.cpp  CoinView.cpp  ConcreteFactory.cpp  EntityView.cpp  FruitView.cpp  Game.cpp  GhostView.cpp  HUD.cpp  LevelState.cpp  MenuState.cpp  PacManView.cpp  PausedState.cpp  SoundManager.cpp  SoundObserver.cpp  SpriteAtlas.cpp  State.cpp  StateManager.cpp  VictoryState.cpp  WallView.cpp
representation/src/core/: Camera.cpp  ConcreteFactory.cpp  Game.cpp  SpriteAtlas.cpp
representation/src/entities/: CoinView.cpp  FruitView.cpp  GhostView.cpp  PacManView.cpp  WallView.cpp
representation/src/states/: LevelState.cpp  MenuState.cpp  PausedState.cpp  StateManager.cpp  VictoryState.cpp
representation/src/systems/: HUD.cpp  SoundManager.cpp  SoundObserver.cpp
resources/data/: highscores.txt
resources/map/: map1.txt
